--- a/TODO.txt
+++ b/TODO.txt
@@ -26,7 +26,7 @@ RESERACH TASK
 
 ''' DONE''' insert today's date into the logfile
 
-Set the dropdown default to the last used mechanic
+''' DONE'''Set the dropdown default to the last used mechanic
 
 ''' DONE'''add biweekly functions
     add a biweekly dropdown 
